trunk/Archive2/11/8e096893d18cd1/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread -Wno-trigraphs main.cpp
main.cpp: In function ‘int main()’:
main.cpp:9:20: error: invalid initialization of non-const reference of type ‘bool&’ from an rvalue of type ‘std::_Bit_iterator::reference {aka std::_Bit_reference}’
     for (bool& i : vec1)
                    ^
